--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=   , initial-scale=1.0">
     <title>Monster</title>
+    <link type="image/png" sizes="48x48" rel="icon" href="icons8-loading-48.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
